added enginges to package json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=12.13.1",
+    "npm": ">6.12.1"
+  },
   "name": "haus",
   "version": "0.1.0",
   "private": true,
