--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.1",
-    "sweetalert": "^2.1.2"
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "sweetalert-react": "^0.4.11"
-  }
+  "devDependencies": {}
 }
