--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
